--- a/poster8/styles.css
+++ b/poster8/styles.css
@@ -2,274 +2,48 @@
   max-width: 980px;
   width: 980px;
   padding: auto;
-  border: 2px solid #de9b72;
-  background-color: #3c3d3f;
 }
-.top-heading {
+
+.title {
   text-align: center;
-  color: #de9b72;
+  margin: 50px auto;
 }
-.top-heading h1 {
-  font-size: 4rem;
+.title h1 {
+  font-size: 68px;
+  font-weight: bold;
+  color: black;
+}
+
+.col:nth-child(1) {
+  max-width: 45%;
+}
+
+.col:nth-child(2) {
+  max-width: 54%;
+  font-size: 1.2rem;
+}
+.col:nth-child(2) span {
   font-weight: bold;
 }
-
-.astrodivider {
-  margin: 20px auto 64px auto;
-  width: 400px;
-  max-width: 100%;
-  position: relative;
-  z-index: 5;
-}
-
-.astrodividermask {
-  overflow: hidden;
-  height: 20px;
-  z-index: 5;
-}
-
-.astrodividermask:after {
-  content: "";
-  display: block;
-  margin: -25px auto 0;
-  width: 100%;
-  height: 25px;
-  border-radius: 125px / 12px;
-  box-shadow: 0 0 8px #de9b72;
-  z-index: 5;
-}
-.astrodivider span {
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  bottom: 100%;
-  margin-bottom: -25px;
-  left: 50%;
-  margin-left: -25px;
-  border-radius: 100%;
-  box-shadow: 0 2px 4px burlywood;
-  background: #fff;
-  z-index: 5;
-}
-.astrodivider i {
-  position: absolute;
-  top: 4px;
-  bottom: 4px;
-  left: 4px;
-  right: 4px;
-  border-radius: 100%;
-  border: 1px dashed #de9b72;
+.name-section {
   text-align: center;
-  line-height: 40px;
-  font-style: normal;
-  color: burlywood;
-  z-index: 5;
+  font-size: 2.3rem;
 }
-
-.img-container {
+.name-section span {
+  font-size: 3rem;
+}
+.age-section {
   text-align: center;
-  margin: 10px auto;
+  font-size: 2rem;
 }
-.my-img {
-  z-index: -1;
-}
-.img-c2 {
-  padding-top: 80px;
-  /* background-image: url(./img/2.png); */
-  background-repeat: no-repeat;
-  background-position: center;
+.age-section span {
+  font-size: 2.3rem;
 }
 
-:root {
-  --skintone-color: #de9b72;
-  --dark-color: #3a3d3e;
+.details {
+  background-color: rgb(105, 105, 105, 0.2);
+  color: black;
 }
-
-.inner-border {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.outer-border {
-  border: 2px solid #de9b72;
-  height: 99%;
-  width: 98%;
-  padding: 6px;
-  margin: 0 auto;
-}
-
-@media (min-width: 992px) {
-  .outer-border {
-    height: 94%;
-  }
-}
-
-.mid-border {
-  border: 6px solid #de9b72;
-  height: 100%;
-  width: 100%;
-  padding: 6px;
-  margin: auto;
-}
-
-.inner-border {
-  position: relative;
-  border: 2px solid #de9b72;
-  height: 100%;
-  width: 100%;
-  margin: auto;
-}
-
-/* Decorations */
-.corner-decoration {
-  position: absolute;
-  width: 3em;
-  margin: -3px;
-}
-
-@media (min-width: 768px) {
-  .corner-decoration {
-    width: 3.5em;
-    margin: -4px;
-  }
-}
-
-@media (min-width: 992px) {
-  .corner-decoration {
-    width: 4em;
-    margin: -5px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .corner-decoration {
-    width: 5em;
-    margin: -6px;
-  }
-}
-
-.corner-decoration.corner-left-top {
-  left: 0;
-  top: 0;
-}
-
-.corner-decoration.corner-right-top {
-  top: 0;
-  right: 0;
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-}
-
-.corner-decoration.corner-right-bottom {
-  right: 0;
-  bottom: 0;
-  -webkit-transform: scale(-1);
-  transform: scale(-1);
-}
-
-.corner-decoration.corner-left-bottom {
-  left: 0;
-  bottom: 0;
-  -webkit-transform: scaleY(-1);
-  transform: scaleY(-1);
-}
-
-.vertical-decoration {
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 11em;
-}
-
-@media (min-width: 768px) {
-  .vertical-decoration {
-    width: 16em;
-  }
-}
-
-@media (min-width: 992px) {
-  .vertical-decoration {
-    width: 20em;
-  }
-}
-
-@media (min-width: 1200px) {
-  .vertical-decoration {
-    width: 27em;
-  }
-}
-
-.vertical-decoration.top {
-  top: 0;
-}
-
-.vertical-decoration.bottom {
-  bottom: 0;
-  -webkit-transform: scaleY(-1);
-  transform: scaleY(-1);
-}
-
-.details-section {
-  color: #de9b72;
-  padding-top: 10px;
-  margin: 50px auto 0 auto;
-  border-left: #de9b72 5px solid;
-  border-top: #de9b72 5px solid;
-  border-right: #de9b72 5px solid;
-  border-top-left-radius: 300px;
-  border-top-right-radius: 300px;
-}
-.cdivider {
-  padding: 0 20px;
-  border-left: #fff 5px solid;
-  border-top: #fff 5px solid;
-  border-right: #fff 5px solid;
-  border-top-left-radius: 450px;
-  border-top-right-radius: 450px;
-}
-.cdivider .row {
-  margin: 20px auto 0 auto;
-  text-align: center;
-}
-
-.c1 {
-  width: 60%;
-  margin: 20px 0 20px 20px;
-}
-.c1 p {
-  font-size: 1.8rem;
-  font-weight: bold;
-}
-
-.c2 {
-  width: 36%;
-  margin: 20px 20px 20px 0;
-}
-
-.c2 p {
-  font-size: 1rem;
-  margin: 10px;
-  color: #3c3d3f;
-}
-.c2 span {
-  font-weight: bold;
-  font-size: 2.5rem;
-  color: #de9b72;
-}
-
-.age-inner {
-  flex-shrink: 0;
-  margin-left: 50px;
-  height: 100px;
-  width: 100px;
-  border: calc(8px + 0.2vw) solid transparent;
-  background-origin: border-box;
-  background-clip: content-box, border-box;
-  background-size: cover;
-  box-sizing: border-box;
-  background-color: #fff;
-  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.5);
-  border-radius: 50%;
+d-img {
+  max-height: max-content;
 }
