--- a/poster10/styles.css
+++ b/poster10/styles.css
@@ -19,7 +19,7 @@
 .top-section h1 {
   font-size: 85px;
   font-weight: bold;
-  color: rgba(252, 49, 49, 0.5);
+  color: rgb(138, 43, 226);
   font-family: cursive;
 }
 
@@ -27,6 +27,11 @@
   margin-top: -50px;
   z-index: 2;
   font-size: 1rem;
+  background-image: linear-gradient(
+    to top,
+    rgb(138, 43, 226),
+    rgba(38, 77, 38, 0.164)
+  );
 }
 .name-section p:nth-child(1) {
   font-size: 44px;
